# quench

./: .gitignore  .v0.rc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  install.sh  quench.toml
crates/cli/: Cargo.toml
crates/cli/benches/: adapter.rs  baseline.rs  cache.rs  check.rs  docs.rs  dogfood.rs  file_walking.rs  git.rs  javascript.rs  memory.rs  regression.rs  report.rs  stress.rs  tests.rs  tests_ci.rs
crates/cli/src/: baseline_tests.rs  cache.rs  cache_tests.rs  check.rs  check_tests.rs  cli.rs  cli_tests.rs  cmd_check.rs  cmd_cloc.rs  cmd_config.rs  cmd_init.rs  cmd_report.rs  color.rs  color_tests.rs  completions.rs  completions_tests.rs  config.rs  discovery.rs  discovery_tests.rs  error.rs  error_tests.rs  file_reader.rs  file_reader_tests.rs  file_size_tests.rs  git.rs  git_tests.rs  help.rs  help_tests.rs  init.rs  init_tests.rs  latest.rs  latest_tests.rs  lib.rs  main.rs  profiles.rs  profiles_tests.rs  ratchet.rs  ratchet_tests.rs  runner.rs  runner_tests.rs  (+8 more)
crates/cli/src/adapter/: generic.rs  generic_tests.rs  glob.rs  glob_tests.rs  go_tests.rs  javascript_tests.rs  mod.rs  mod_tests.rs  patterns.rs  project.rs  rust_tests.rs  shell_tests.rs
crates/cli/src/checks/: cloc.rs  cloc_tests.rs  escapes.rs  escapes_tests.rs  git.rs  git_tests.rs  license.rs  license_tests.rs  mod.rs  mod_tests.rs  stub.rs  stub_tests.rs
crates/cli/src/cloc/: comment.rs  comment_tests.rs
crates/cli/src/cmd_check/: mod.rs  verbose.rs
crates/cli/src/config/: checks.rs  checks_tests.rs  defaults.rs  defaults_tests.rs  duration.rs  go.rs  (+23 more)
(+799 files in other folders)
