[package]
name = "quench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast linting tool for AI agents that measures quality signals"
readme = "../../README.md"

[[bin]]
name = "quench"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
